--- a/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
@@ -1,50 +1,48 @@
 <div class="text-center" *ngIf="!movie">
-    <img src="/assets/images/loading.gif" alt="">
+    <img src="/assets/images/loading.gif" alt="Cargando..." class="img-fluid" style="max-width: 100px; margin-top: 25vh;">
 </div>
 
 <div class="row" *ngIf="movie">
     <div class="col-md-4">
-        <img [src]="movie.image" [alt]="movie.title">
+        <div class="card mb-4 rounded">
+            <img [src]="movie.image" [alt]="movie.title" class="card-img-top">
+        </div>
     </div>
+
     <div class="col-md-7 ms-auto">
-        <table class=" table table-dark table-hover ">
-            <tbody>
-                <tr>
-                    <td>Título</td>
-                    <td>
-                        {{movie.title}}
-                    </td>
-                </tr>
-                <tr>
-                    <td>Año</td>
-                    <td>
-                        {{movie.year}}
-                    </td>
-                </tr>
-                <tr>
-                    <td>Género</td>
-                    <td>
-                        <span *ngFor="let genre of movie.genres " class="badge ">
-                            {{genre.name}}
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Calificación</td>
-                    <td>{{movie.rating}}</td>
-                </tr>
-                <tr>
-                    <td>Lanzamiento</td>
-                    <td>{{movie.release}}</td>
-                </tr>
-            </tbody>
-        </table>
-        <button (click)="Regresar()" class="btn btn-primary">Regresar</button>
-        <form>
-            <p></p>
-            <div>
+        <div class="container bg-light p-4 rounded">
+            <table class="table table-hover table-white">
+                <tbody>
+                    <tr>
+                        <td>Título</td>
+                        <td>{{movie.title}}</td>
+                    </tr>
+                    <tr>
+                        <td>Año</td>
+                        <td>{{movie.year}}</td>
+                    </tr>
+                    <tr>
+                        <td>Género</td>
+                        <td>
+                            <span *ngFor="let genre of movie.genres" class="badge bg-dark">
+                                {{genre.name}}
+                            </span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Calificación</td>
+                        <td>{{movie.rating}}</td>
+                    </tr>
+                    <tr>
+                        <td>Lanzamiento</td>
+                        <td>{{movie.release}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="d-flex justify-content-start">
+                <button (click)="Regresar()" class="btn btn-primary me-3">Regresar</button>
                 <button (click)="Listar(movie._id)" class="btn btn-info">Ver reseñas</button>
             </div>
-        </form>
+        </div>
     </div>
 </div>
