--- a/spa/spa-fronted/src/app/components/home/home.component.html
+++ b/spa/spa-fronted/src/app/components/home/home.component.html
@@ -1,11 +1,10 @@
 <div class="row">
-    <div class="col-md 4"></div>
-    <div class="col-md 4">
-        <img src="/assets/images/portada.png" alt="portada" class="img img-thumbnail ">
-        <hr>
-        <h3>Spa en angular</h3>
+    <div class="col-md-4"></div>
+    <div class="col-md-4 text-center">
+        <img src="/assets/images/portada.png" alt="portada" class="img img-thumbnail mb-3">
+        <h3>Spa en Angular</h3>
         <p>Desarrollado por JRamirez y MPimiento</p>
         <p>&copy; {{year}} Todos los derechos reservados</p>
     </div>
-    <div class="col-md 4"></div>
+    <div class="col-md-4"></div>
 </div>
